<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" android:showAsAction="never" />-->
    <item android:id="@+id/conversation" android:title="@string/menu_chats"
        android:orderInCategory="50"  android:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_friends" android:title="@string/action_friends"
        android:orderInCategory="100" android:showAsAction="never"/>
    <item android:id="@+id/action_groups" android:title="@string/action_groups"
        android:orderInCategory="150" android:showAsAction="collapseActionView"/>
    <item android:id="@+id/logOut" android:title="@string/logout"
        android:orderInCategory="200" android:showAsAction="always"/>

</menu>
